tests/paczka1/fuzzy1/97612197.err
Error in line 22: iv1J3U75Ph2 S544 13,8
Error in line 16: HsujZsVg7 S974 95,8
Error in line 28: TUM A973 41,8
Error in line 33: A973 S544 -2,6
Error in line 31: TUM S685 95,3
Error in line 37: TUM S974 84,8
